Fix order page overflow of content

--- a/VideogameShop.Web/wwwroot/css/orders.css
+++ b/VideogameShop.Web/wwwroot/css/orders.css
@@ -1,105 +1,22 @@
-﻿body {
-    color: #212529;
-    background-color: antiquewhite;
-    margin: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../lib/images/homeBackground.jpg);
-    background-size: cover;
-    padding: 0;
+﻿
+/*Styling for the tables*/
+html {
+    display: table;
+    width:100%;
 }
 
 #window {
-    height: 85%;
-    min-width:60%;
+    min-width: 60%;
+    word-wrap: break-word;
+    display: table
 }
-
-.navbar {
-    background-color: rgb(202,223,195);
-    background: -webkit-linear-gradient(top, #f9fcea 0%,#f5f9d3 50%,#f2f7cf 51%,#f7fcd6 100%);
+#dataTable {
+    table-layout: fixed;
+    width: 100%;
 }
-
-a.navbar-brand {
-    white-space: normal;
-    text-align: left;
-    word-break: break-all;
-}
-
-
-.card {
-    background-color: rgb(202,223,195);
-}
-/*Styling for the tables*/
 #dataTable_wrapper {
     background-color: #F5F5DC;
     border-radius: 5px;
 }
 
-.dataTables_filter {
-    align-self: flex-end;
-}
 
-/* Provide sufficient contrast against white background */
-a {
-    color: #0366d6;
-}
-
-.btn-primary {
-    color: #000;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-    font-size: 14px;
-}
-
-@media (min-width: 768px) {
-    html {
-        font-size: 16px;
-    }
-}
-
-.border-top {
-    border-top: 1px solid #e5e5e5;
-}
-
-.border-bottom {
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-    font-size: 1rem;
-    line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-    position: relative;
-    min-height: 100%;
-}
-
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    white-space: nowrap;
-    line-height: 60px; /* Vertically center the text there */
-    background: -webkit-linear-gradient(top, #f9fcea 0%,#f5f9d3 50%,#f2f7cf 51%,#f7fcd6 100%);
-}
