--- a/VideogameShop.Web/wwwroot/css/site.css
+++ b/VideogameShop.Web/wwwroot/css/site.css
@@ -4,10 +4,8 @@ for details on configuring this project to bundle and minify static web assets. 
 /*Styling for the home page*/
 body {
     color: #212529;
-    background-color: antiquewhite;
+    background-color: white;
     margin: 0;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../lib/images/homeBackground.jpg);
-    background-size: cover;
     padding:0;
 }
 #window {
